--- a/Mobile Development/app/src/main/res/layout/item_clothes_list.xml
+++ b/Mobile Development/app/src/main/res/layout/item_clothes_list.xml
@@ -74,7 +74,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/delete_icon"
+            android:src="@drawable/delete_icon_clothes"
             app:iconSize="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
